syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message AnnounceData {
    string nouse_count_down_text = 5;
    uint32 nouse_center_system_frequency = 3;
	int64 end_time = 7;
	int64 begin_time = 11;
    string banner_text = 2;
	bool is_center_system_last_5_every_minutes = 9;
    string emergency_text = 4;
    uint32 banner_frequency = 12;
	uint32 config_id = 15;
}